updated Date format

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -18,7 +18,7 @@
           <div class="columns">
             <div class="column is-8 is-offset-2">
               <div class="content is-medium">
-                <h2 class="subtitle is-4">  {{ .PublishDate.Format "January 2, 2006"  }} </h2>
+                <h2 class="subtitle is-4">  {{ .PublishDate.Format "01-02-2006"  }} </h2>
                 <h1 class="title">{{.Title}}</h1>
                 <p>{{.Content}}</p>                
               </div>
