--- a/layouts/partials/case.html
+++ b/layouts/partials/case.html
@@ -18,7 +18,7 @@
 							<img src="{{ .Params.caseLogo | absURL }}" alt="{{.Title}}"> 
 						</figure>
 					{{end}}
-                    <h2 class="subtitle is-5 has-text-grey has-text-centered ">{{ .PublishDate.Format "January 2, 2006"  }}</h2>
+                    <h2 class="subtitle is-5 has-text-grey has-text-centered ">{{ .PublishDate.Format "01-02-2006"  }}</h2>
                     <h1 class="title has-text-black has-text-centered  is-4">{{.Title}} </h1>
                     <!--<p class="has-text-dark">{{.Summary | safeHTML | truncate 150}}</p>  -->  
 						<p  class="has-text-centered">
